rains_docker_kub/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-api-rains-predict
  labels:
    app: service-api-rains-predict
spec:
  type: ClusterIP
  ports:
  - port: 8002
    protocol: TCP
    targetPort: 8000
  selector:
    app: api-rains-predict
