rains_docker_kub/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api-rains-predict
spec:
  defaultBackend:
    service:
      name: service-api-rains-predict
      port:
        number: 8002
